--- a/Flask-Youtube-Search-App/flask_youtube_search/templates/index.html
+++ b/Flask-Youtube-Search-App/flask_youtube_search/templates/index.html
@@ -18,10 +18,6 @@
                 <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
                     <div class="container">
                         <a class="navbar-brand mr-4" href="/">Flask Youtube Search App</a>
-        
-                        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button> -->
                     </div>
                 </nav>
             </header>
@@ -49,14 +45,14 @@
                             {% for video in videos %}
                             <div class="col-md-4">
                                 <div class="card mb-4 shadow-sm">
-                                    <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="{{ video.thumbnail }}" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"></img>
+                                    <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="{{ video.thumbnail }}" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="placeholder: Thumbnail"></img>
                                     <div class="card-body">
                                         <p class="card-text">{{ video.title }}</p>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <div class="btn-group">
-                                                <a type="button" href="{{ video.url }}" class="btn btn-sm btn-outline-secondary">View</a>
-                                            </div>
                                             <small class="text-muted">{{ video.duration }} mins</small>
+                                            <div class="btn-group">
+                                                <a type="button" href="{{ video.url }}" class="btn btn-md btn-outline-secondary view">View</a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
